# conformity

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CHANGELOG.txt  CONTRIBUTING.rst  Dockerfile  README.rst  conftest.py  mypy.ini  setup.cfg  setup.py  tasks.py  tox.ini  tox.sh
conformity/: __init__.py  constants.py  decorators.py  error.py  fields.py  py.typed  types.py  typing.py  utils.py  validator.py  version.py
conformity/fields/: __init__.py  base.py  basic.py  builtin.py  collections.py  country.py  currency.py  datetime.py  email.py  geo.py  legacy.py  logging.py  meta.py  modifiers.py  net.py  protocols.py  simple.py  structures.py  temporal.py  utils.py
conformity/fields/python/: __init__.py  imports.py  logging.py
conformity/settings/: __init__.py
conformity/sphinx_ext/: autodoc.py  linkcode.py
conformity/sphinx_ext/static/: autodoc_auto_toc.js
conformity/tests/: test_fields.py  test_fields_geo.py  test_fields_meta.py  test_fields_net.py  test_validator.py
docs/: conf.py  fields.rst  index.rst  reference.rst  settings.rst  sphinx.rst  validators.rst
docs/_templates/: related_projects.html
tests/: test_conformity_type.py  test_fields.py  test_fields_country.py  test_fields_currency.py  test_fields_email.py  test_fields_geo.py  test_fields_meta.py  test_fields_net.py  test_logging.py  test_settings.py  test_typing.py  test_utils.py  test_validator.py
tests/sphinx_ext/: test_autodoc.py  test_linkcode.py  utils.py
