[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[flake8]
exclude = .git,.env/*,docs/*,build/*,.eggs/*,*.egg-info/*
max-line-length = 120

[aliases]
test=pytest

[tool:pytest]
addopts = -s --junitxml=pytests.xml --cov-report xml --cov-report term-missing --cov=conformity.error --cov=conformity.utils --cov=conformity.validator --cov=conformity.fields
